<resources>
    <string name="app_name">Алексей Родионов</string>
    <string name="mobile_number">Мобильный номер</string>
    <string name="email">E-mail</string>
    <string name="vk_profile">Профиль в VK</string>
    <string name="repo_hint">Репозиторий</string>
    <string name="about_myself">О себе</string>
    <string name="my_phone">8 (950) xxx-72-69</string>
    <string name="my_email">taker.ram512@gmail.com</string>
    <string name="my_vk">vk.com/ram512</string>
    <string name="my_repo">github.com/RAM512/DevIntensive</string>
    <string name="profile.bio.dummy">Двуног, двурук, двуглаз и многозуб. sdfkhsdfkhj sdkfjhsdkfjhsdfkhj lksdjfsldkfjsd flksdjflksdfjsdlf sdfsdflsdkfj sdlkfjsdlkfjsdflk sdlkfjsdlkfjsdf sdlkfjsdlfkjsdf sdfsdfsdf</string>
    <string name="rating">Рейтинг</string>
    <string name="code_strings_text">Написано строк кода</string>
    <string name="projects_text">Проектов</string>
    <string name="my_profile">Мой профиль</string>
    <string name="team">Команда</string>
    <string name="user_photo.placeholder.image">Изменить фотографию профиля</string>
    <string name="user_profile.dialog.galery">Загрузить из галереи</string>
    <string name="user_profile.dialog.photo">Сделать снимок</string>
    <string name="user_profile.dialog.cancel">Отмена</string>
    <string name="user_profile.dialog.title">Изменить фотографию профиля</string>
    <string name="user_profile.choose.message">Выберите фото</string>
    <string name="user_profile.choose.email_app">Отправка письма...</string>
    <string name="password">Пароль</string>
    <string name="login_form.dialog.enter">ВОЙТИ</string>
    <string name="login_form.dialog.forgot_password">Забыли пароль?</string>
    <string name="allow">Разрешить</string>
    <string name="permission_message">Для корректной работы необходимо дать требуемые разрешения</string>
    <string name="user_data.error.message">Неверное значение</string>
    <string name="auth.authorization_enter">Войти</string>
    <string name="auth.forgot">Забыли пароль?</string>
    <string name="card_item.button.more_info">Просмотр</string>
    <string name="search_action_hint_enter_user_name">Введите имя пользователя</string>
</resources>
