<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    tools:context=".ui.activities.MainActivity">

    <LinearLayout
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_104"
            android:background="@color/gray"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_weight="1">

                <com.softdesign.devintensive.ui.view.TextViewRoboto
                    android:id="@+id/rating_count_text"
                    style="@style/white_text"
                    android:textSize="@dimen/font_size_24"
                    android:text="5"/>
                <com.softdesign.devintensive.ui.view.TextViewRoboto
                    style="@style/white_text"
                    android:text="@string/rating"/>
            </LinearLayout>

            <View
                style="@style/vertical_line"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_weight="2">

                <com.softdesign.devintensive.ui.view.TextViewRoboto
                    android:id="@+id/code_strings_count_text"
                    style="@style/white_text"
                    android:textSize="@dimen/font_size_24"
                    android:text="5"/>
                <com.softdesign.devintensive.ui.view.TextViewRoboto
                    style="@style/white_text"
                    android:text="@string/code_strings_text"/>
            </LinearLayout>

            <View
                style="@style/vertical_line"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_weight="1">

                <com.softdesign.devintensive.ui.view.TextViewRoboto
                    android:id="@+id/project_count_text"
                    style="@style/white_text"
                    android:textSize="@dimen/font_size_24"
                    android:text="5"/>
                <com.softdesign.devintensive.ui.view.TextViewRoboto
                    style="@style/white_text"
                    android:text="@string/projects_text"/>
            </LinearLayout>

        </LinearLayout>

        <!--Мобильный номер-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_larger_72"
            android:orientation="horizontal">
            <ImageView
                style="@style/icon.left"
                android:src="@drawable/ic_call_black_24dp" />
            <LinearLayout
                style="@style/text_data">
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >
                    <com.softdesign.devintensive.ui.view.EditTextRoboto
                        android:id="@+id/phone_edit"
                        style="@style/edit_text_disabled"
                        android:hint="@string/mobile_number"
                        android:inputType="phone"
                        android:text="@string/my_phone"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>
            <ImageView
                style="@style/icon.right"
                android:src="@drawable/ic_phone_in_talk_black_24dp" />
        </LinearLayout>
        <View style="@style/horizontal_line"/>

        <!--E-mail-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_larger_72"
            android:orientation="horizontal">
            <ImageView
                style="@style/icon.left"
                android:src="@drawable/ic_email_black_24dp" />
            <LinearLayout
                style="@style/text_data">
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >
                    <com.softdesign.devintensive.ui.view.EditTextRoboto
                        android:id="@+id/email_edit"
                        style="@style/edit_text_disabled"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:text="@string/my_email"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>
            <ImageView
                style="@style/icon.right"
                android:src="@drawable/ic_send_black_24dp" />
        </LinearLayout>
        <View style="@style/horizontal_line"/>

        <!--Профиль в VK-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_larger_72"
            android:orientation="horizontal">
            <ImageView
                style="@style/icon.left"
                android:src="@drawable/vk_social_logotype" />
            <LinearLayout
                style="@style/text_data">
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >
                    <com.softdesign.devintensive.ui.view.EditTextRoboto
                        android:id="@+id/vk_edit"
                        style="@style/edit_text_disabled"
                        android:hint="@string/vk_profile"
                        android:inputType="textUri"
                        android:text="@string/my_vk"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>
            <ImageView
                style="@style/icon.right"
                android:src="@drawable/ic_visibility_black_24dp" />
        </LinearLayout>
        <View style="@style/horizontal_line"/>

        <!--Репозиторий-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                style="@style/icon.left"
                android:src="@drawable/github_icon" />
            <LinearLayout
                style="@style/text_data" >
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >
                    <com.softdesign.devintensive.ui.view.EditTextRoboto
                        android:id="@+id/github_edit"
                        style="@style/edit_text_disabled"
                        android:hint="@string/repo"
                        android:inputType="textMultiLine"
                        android:text="@string/my_repo"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>
            <ImageView
                style="@style/icon.right"
                android:src="@drawable/ic_visibility_black_24dp" />
        </LinearLayout>
        <View style="@style/horizontal_line"/>

        <!--О себе-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                style="@style/icon.left"
                android:src="@drawable/ic_account_circle_black_24dp" />
            <LinearLayout
                style="@style/text_data" >
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >
                    <com.softdesign.devintensive.ui.view.EditTextRoboto
                        android:id="@+id/about_myself_edit"
                        style="@style/edit_text_disabled"
                        android:hint="@string/about_myself"
                        android:inputType="textMultiLine"
                        android:text="@string/my_about_myself"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</android.support.v4.widget.NestedScrollView>
