<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    app:layout_behavior=".ui.view.behaviors.CustomNestedScrollBehavior"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!--Мобильный номер-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_larger_72"
            android:orientation="horizontal"
            android:gravity="bottom"
            >

            <ImageView
                style="@style/icon.left"
                android:src="@drawable/ic_call_black_24dp"/>

            <LinearLayout
                style="@style/text_data">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/phone_text_input"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/size_88">

                    <com.softdesign.devintensive.ui.view.EditTextRobotoCondensedRegular
                        android:id="@+id/phone_edit"
                        style="@style/edit_text_disabled"
                        android:hint="@string/mobile_number"
                        android:inputType="phone"
                        android:text="@string/my_phone"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <ImageView
                android:id="@+id/call_img"
                style="@style/icon.right"
                android:src="@drawable/ic_phone_in_talk_black_24dp"/>
        </LinearLayout>

        <View style="@style/horizontal_line"/>

        <!--E-mail-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_larger_72"
            android:orientation="horizontal"
            android:gravity="bottom">

            <ImageView
                style="@style/icon.left"
                android:src="@drawable/ic_email_black_24dp"/>

            <LinearLayout
                style="@style/text_data">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/email_text_input"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/size_88">

                    <com.softdesign.devintensive.ui.view.EditTextRobotoCondensedRegular
                        android:id="@+id/email_edit"
                        style="@style/edit_text_disabled"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:text="@string/my_email"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <ImageView
                android:id="@+id/send_email_img"
                style="@style/icon.right"
                android:src="@drawable/ic_send_black_24dp"/>
        </LinearLayout>

        <View style="@style/horizontal_line"/>

        <!--Профиль в VK-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_larger_72"
            android:orientation="horizontal"
            android:gravity="bottom">

            <ImageView
                style="@style/icon.left"
                android:src="@drawable/vk_social_logotype"/>

            <LinearLayout
                style="@style/text_data">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/vk_text_input"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/size_88">

                    <com.softdesign.devintensive.ui.view.EditTextRobotoCondensedRegular
                        android:id="@+id/vk_edit"
                        style="@style/edit_text_disabled"
                        android:hint="@string/vk_profile"
                        android:inputType="textUri"
                        android:text="@string/my_vk"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <ImageView
                android:id="@+id/open_vk_profile"
                style="@style/icon.right"
                android:src="@drawable/ic_visibility_black_24dp"/>
        </LinearLayout>

        <View style="@style/horizontal_line"/>

        <!--Репозиторий-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="bottom">

            <ImageView
                style="@style/icon.left"
                android:src="@drawable/github_icon"/>

            <LinearLayout
                style="@style/text_data">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/github_text_input"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/size_88">

                    <com.softdesign.devintensive.ui.view.EditTextRobotoCondensedRegular
                        android:id="@+id/github_edit"
                        style="@style/edit_text_disabled"
                        android:hint="@string/repo"
                        android:inputType="textUri"
                        android:text="@string/my_repo"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <ImageView
                android:id="@+id/open_github_repo"
                style="@style/icon.right"
                android:src="@drawable/ic_visibility_black_24dp"/>
        </LinearLayout>

        <View style="@style/horizontal_line"/>

        <!--О себе-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="bottom">

            <ImageView
                style="@style/icon.left"
                android:src="@drawable/ic_account_circle_black_24dp"/>

            <LinearLayout
                style="@style/text_data">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.softdesign.devintensive.ui.view.EditTextRobotoCondensedRegular
                        android:id="@+id/about_myself_edit"
                        style="@style/edit_text_disabled"
                        android:hint="@string/about_myself"
                        android:inputType="textMultiLine"
                        android:text="@string/my_about_myself"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</android.support.v4.widget.NestedScrollView>