<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_coordinator_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar_layout"
        style="@style/AppTheme.AppBarOverlay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_primary"
        android:fitsSystemWindows="true">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:contentScrim="@color/color_primary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

                <ImageView
                    android:id="@+id/user_photo_img"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/profile_image_size"
                    android:fitsSystemWindows="true"
                    android:scaleType="centerCrop"
                    android:src="@drawable/user_bg"/>

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/AppTheme.PopupOverlay"
                app:theme="@style/ToolbarStyle"/>
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:id="@+id/programmer_status"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_104"
        android:background="@color/grey"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:behavior_min_height="@dimen/size_medium_56"
        app:layout_behavior=".ui.behaviors.ProgrammerStatusBehavior"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <com.softdesign.devintensive.ui.view.TextViewRobotoCondensedRegular
                android:id="@+id/rating_count_text"
                style="@style/white_text"
                android:text="5"
                android:textSize="@dimen/font_size_24"/>

            <com.softdesign.devintensive.ui.view.TextViewRobotoCondensedRegular
                style="@style/white_text"
                android:text="@string/rating"/>
        </LinearLayout>

        <View
            style="@style/vertical_line"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:orientation="vertical">

            <com.softdesign.devintensive.ui.view.TextViewRobotoCondensedRegular
                android:id="@+id/code_strings_count_text"
                style="@style/white_text"
                android:text="5"
                android:textSize="@dimen/font_size_24"/>

            <com.softdesign.devintensive.ui.view.TextViewRobotoCondensedRegular
                style="@style/white_text"
                android:text="@string/code_strings_text"/>
        </LinearLayout>

        <View
            style="@style/vertical_line"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <com.softdesign.devintensive.ui.view.TextViewRobotoCondensedRegular
                android:id="@+id/project_count_text"
                style="@style/white_text"
                android:text="5"
                android:textSize="@dimen/font_size_24"/>

            <com.softdesign.devintensive.ui.view.TextViewRobotoCondensedRegular
                style="@style/white_text"
                android:text="@string/projects_text"/>
        </LinearLayout>

    </LinearLayout>

    <include layout="@layout/static_profile_content"/>

</android.support.design.widget.CoordinatorLayout>
